# uvws

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
.github/workflows/: release.yml
.oculpm/: config.toml
.oculpm/agents/: _template.md
.oculpm/journal/20260531/Bugs/: 0243_bug_resize-ui-breakage.md  1556_bug_macos-gatekeeper-damaged-app.md  1615_bug_macos-gui-path-not-found-uv.md
.oculpm/journal/20260531/Chores/: 1524_chore_rename-pyspace-to-uvws.md
.oculpm/journal/20260531/Errors/: 2211_error_tauri-updater-signature-not-found.md
.oculpm/journal/20260531/Features_to_add/: 0025_feature_pearl-shell-ui-redesign.md  1518_feature_seamless-titlebar-overlay.md  1548_feature_github-release-v010.md  (+1 more)
docs/: README.md  프로젝트_스크래치.md
docs/alpha/: plan.md
docs/alpha/phase/: phase1.md  phase2.md  phase3.md  phase4.md
docs/features/: 01-tunnel-qr-share.md  02-resource-monitor.md  04-native-notifications.md  09-dependency-doctor.md  MASTER_PROMPT.md  PROGRESS.md  README.md
docs/promo/: LAUNCH-CHECKLIST.md  README.md  demo-gif-storyboard.md  okky-커뮤니티.md  producthunt.md  reddit-hackernews.md  x-thread.md  긱뉴스.md
landing/: index.html  robots.txt  sitemap.xml
public/icons/: icon.icns
src/: App.css  App.tsx  i18n.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  git.rs  lib.rs  main.rs  runner.rs  tunnel.rs  uv.rs
src/components/: TerminalView.tsx
(+12 files in other folders)
