[package]
name = "tauri-app"
version = "0.7.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
regex = "1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2"
sysinfo = "0.33"

# 창 전체 투명도(네이티브 알파)를 위한 플랫폼별 의존성.
# 버전은 Cargo.lock에서 이미 트리에 있는 것과 동일하게 맞춰 단일 인스턴스로 통합되게 한다.
# Windows는 WebView2 + 레이어드 윈도우 알파가 불안정해 창 투명도를 지원하지 않으므로 의존성 없음.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

